   requested one (v5.6 release in 2000). This is to request the unicode_strings
   feature, making the utf strings more predictable.

po4a main script (the deprecated po4a-* scripts are still buggy):
 * Deal properly with CRLF files coming from windows (GitHub's #409).
 * Allow to escape spaces in file names, or to quote them (GitHub's #412).

Build scripts:
 * Use xmlcatalog(1) to find DocBook XSL file (GitHub's #431).

Translations:
 * Updated: Chinese (traditional), thanks Haowei Hsu.
 * Updated: French, thanks Jérémie Tarot.
 * Updated: German, thanks Helge Kreutzmann.
 * Updated: Japanese, thanks gemmaro.
 * Updated: Norwegian Bokmål, thanks Allan Nordhøy and Petter Reinholdtsen.
 * Updated: Portuguese, thanks Silvério Santos.
 * Updated: Russian, thanks vrbtm and Виталий Наумов.
 * Updated: Serbian (cyrillic), thanks Ivan Pesic.
 * Updated: Spanish, thanks Francisco Serrador and ignotus.

=======================================================================
        ___   __   ___
__   __/ _ \ / /_ / _ \
\ \ / / | | | '_ \ (_) |          Happy New Year release.
 \ V /| |_| | (_) \__, |
  \_/  \___(_)___/  /_/           (Released on 2023/01/01)

Markdown:
 * Parts of a fenced divs are now translated separately (GitHub's #381)

YAML and Yaml Front Matter:
 * Use the implementation of YFM to parse YAML files too.
   - This reduces the code dupplication, and brings the nice features over:
     Numbers and arrays are not quoted anymore in Yaml files, as it should be.
   - This adds the yfm_paths option to Markdown and Asciidoc YFM,
     fixing GitHub's #392 along the way.
   - Please note that '-o keys' is now case-sensitive in Yaml documents.
 * Do not translate nor quote booleans, so that they are not treated as string.
   Thanks Gissmo for GitHub's PR #393, even if I had to rework it quite a bit.

XML:
 * Correctly handle placeholders of empty elements (GitHub's #389)
 * Translate attributes within attribute-folded inline and placeholder (GH #391)