@@ -295,9 +295,7 @@ print STDERR wrap_msg( gettext("Parse input files... ") ) if $verbose;
 $doc->process(
     'file_in_name'    => \@masterfiles,
     'file_in_charset' => $mastchar,
-    'po_out_name'     => $pot_filename,
-    'debug'           => $debug,
-    'verbose'         => $verbose
+    'po_out_name'     => $pot_filename
 );
 
 print STDERR wrap_msg( gettext("done.") ) if $verbose;
