@@ -58,6 +58,9 @@ po4a main script (the deprecated po4a-* scripts are still buggy):
  * Deal properly with CRLF files coming from windows (GitHub's #409).
  * Allow to escape spaces in file names, or to quote them (GitHub's #412).
 
+po4a-translate:
+ * Remove the wrap-po option that was not used internally.
+
 Build scripts:
  * Use xmlcatalog(1) to find DocBook XSL file (GitHub's #431).
 
